[package]
name = "os-clx-baremetal"
version = "0.1.0"
edition = "2021"


[dependencies]
bootloader = "0.9"
x86_64 = { version = "0.14", default-features = false, features = ["instructions", "registers"] }
spin = "0.9"
volatile = "0.4"
uart_16550 = "0.2"


[profile.release]
panic = "abort"

[lib]
name = "os_clx_baremetal"
path = "src/lib.rs"
crate-type = ["staticlib"]

[features]
default = []
